<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="POU" Id="{7bd72082-ff9a-41aa-8a8b-fa748058917e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION POU : ST_Request
VAR_INPUT
	sTimeInput: STRING;
	stTargetColor: ST_LED;
END_VAR
VAR_OUTPUT
	stOutputRequest: ST_Request;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[stOutputRequest.stTargetLED := stTargetColor;

IF len(sTimeInput) = 0 THEN 
	stOutputRequest.tTargetTime := T#3S; 
ELSE 
	stOutputRequest.tTargetTime := STRING_TO_TIME(sTimeInput);
END_IF]]></ST>
    </Implementation>
    <LineIds Name="POU">
      <LineId Id="22" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="29" Count="2" />
      <LineId Id="27" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>